apps/vaultwarden/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "vaultwarden"
spec:
  ports:
    - port: 80
      targetPort: "vaultwarden"
  selector:
    app.kubernetes.io/name: "vaultwarden"
